# HowHotIsTheShop

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  check.sh  check_device.sh  fly.toml  history_backup.json  mypy.ini  pyproject.toml
.github/workflows/: update-and-backup.yml  verify.yml
backup/: history.json
howhot/: __init__.py  app.py  backfill_device_history.py  check_temp_age.py  device_stats.py  memory_cache.py  shop_temp.py  update_caches.py  weather.py
howhot/templates/: base.html  history.html  index.html
tests/: conftest.py  test_app.py  test_check_temp_age.py  test_device_stats.py  test_shop_temp.py  test_update_caches.py  test_weather.py
