[tool.poetry]
name = "howhotistheshop"
version = "0.1.0"
description = "Tell my wife how hot her shop is wherever she is"
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.pylint.master]
min-similarity-lines = 11
ignore-docstrings = "yes"
ignore-comments = "yes"
ignore-imports = "yes"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114, C0116, C0115, R0913"

[tool.poetry.dependencies]
python = "^3.9.7"
requests = "^2.26.0"
jinja2 = "^3.0.1"
flask = "^2.0.1"
redis = "^3.5.3"
gunicorn = "^20.1.0"
flask-talisman = "^0.8.1"
pytz = "^2021.1"
sendgrid = "^6.7.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
coverage = "^5.5"
isort = "^5.9.2"
mypy = "^0.910"
pylint = "^2.9.5"
types-pytz = "^2021.1.0"
fakeredis = "^1.5.2"
responses = "^0.13.3"
types-requests = "^2.25.0"
types-redis = "^3.5.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
