[tool.poetry]
name = "howhotistheshop"
version = "0.1.0"
description = "Tell my wife how hot her shop is wherever she is"
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.pylint.master]
min-similarity-lines = 11
ignore-docstrings = "yes"
ignore-comments = "yes"
ignore-imports = "yes"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114, C0116, C0115, R0913"

[tool.poetry.dependencies]
python = "3.12.0"
requests = "2.32.3"
jinja2 = "^3.0.1"
flask = "^3.0.3"
redis = "^5.0.4"
gunicorn = "^23.0.0"
flask-talisman = "^1.1.0"
pytz = "^2024.1"
sendgrid = "^6.7.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
coverage = "^7.5.1"
isort = "^5.9.2"
mypy = "^1.10.0"
pylint = "^3.1.0"
types-pytz = "^2024.1.0"
fakeredis = "^2.22.0"
responses = "^0.25.0"
types-requests = "^2.25.0"
types-redis = "^4.6.0.11"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
