[project]
name = "howhotistheshop"
version = "0.1.0"
description = "Tell my wife how hot her shop is wherever she is"
authors = [{ name = "Matt Bachmann", email = "bachmann.matt@gmail.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests>=2.34.2,<3.0",
    "jinja2>=3.1.6,<4.0",
    "flask>=3.1.3,<4.0",
    "gunicorn>=26.0.0,<27.0",
    "sendgrid>=6.12.5,<7.0",
    "flask-compress>=1.24",
    "apscheduler>=3.10,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "coverage>=7.14.1,<8",
    "mypy>=2.1.0,<3",
    "ruff>=0.15",
    "responses>=0.26.1,<0.27",
    "types-requests>=2.33.0,<3",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
